--- a/LegoArena/LegoArena.ClassLibrary/LegoArena.ClassLibrary.csproj
+++ b/LegoArena/LegoArena.ClassLibrary/LegoArena.ClassLibrary.csproj
@@ -40,7 +40,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColourSensor.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="GyroSensor.cs" />
+    <Compile Include="Motor.cs" />
+    <Compile Include="Movement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sensor.cs" />
+    <Compile Include="UltrasonicSensor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Lego.Ev3.Desktop\Lego.Ev3.Desktop.csproj">
+      <Project>{79c444de-86f1-4aff-903a-4b6ed31655ea}</Project>
+      <Name>Lego.Ev3.Desktop</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
