--- a/LegoArena/LegoArena.ClassLibrary/LegoArena.ClassLibrary.csproj
+++ b/LegoArena/LegoArena.ClassLibrary/LegoArena.ClassLibrary.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Movement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sensor.cs" />
+    <Compile Include="TeamBrick.cs" />
     <Compile Include="UltrasonicSensor.cs" />
   </ItemGroup>
   <ItemGroup>
