fixed backgroudn issue - Dylan

--- a/LegoArena/LegoArena.MainWindow/LegoArena.MainWindow.csproj
+++ b/LegoArena/LegoArena.MainWindow/LegoArena.MainWindow.csproj
@@ -115,9 +115,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Background.jpg">
+    <Content Include="Resources\Background.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
